# y_lab_1

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: db.py  models.py  queries.py
app/dependencies/: redis.py
app/repositories/: __init__.py  repositories_interface.py
app/repositories/orm_repositories/: dish_repository.py  menu_repository.py  submenu_repository.py
app/repositories/redis_repository/: redis_cache_repository.py
app/routers/: dish_router.py  main_router.py  menu_router.py  submenu_router.py
app/schemas/: dish_schemas.py  menu_schemas.py  submenu_schemas.py
app/services/: dish_service.py  menu_service.py  submenu_service.py
app/tests/: conftest.py  test_dish.py  test_menu.py  test_menu_details.py  test_postman_scenario.py  test_submenu.py
