[tool.poetry]
name = "y-lab-1"
version = "0.1.0"
description = "FastAPI CRUD"
authors = ["Sergei Demchenko <hb13718@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
